# flowguard

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 20260524_add_ci.md  20260524_v0.2_core.md  20260524_v0.3_release_review.md  20260623_loop_engineer_contract.md  20260623_v1_implementation_plan.md  20260623_v1_loop_state.md  20260623_v1_release_review.md  20260623_v1_technical_design.md  agent_context_spec.md  case_study.md  check_cookbook.md  design.md  integration_guide.md  positioning.md  quickstart_check.md  v0.1_agent_handoff.md  v0.1_execution_plan.md  v0.2_initial_plan.md  v1_scope.md
examples/case_study/: pipeline.py
examples/github_issue_triage/: pipeline.py
examples/llm_json_pipeline/: pipeline.py
skills/flowguard/: SKILL.md
src/flowguard/: __init__.py  artifacts.py  cli.py  comparison.py  context.py  expectations.py  golden.py  mcp_server.py  paths.py  query.py  report.py  runtime.py  schema.py  workflow_map.py
tests/: test_case_study.py  test_cli.py  test_comparison.py  test_context.py  test_docs.py  test_expectations.py  test_golden.py  test_mcp_server.py  test_query.py  test_release_metadata.py  test_report.py  test_runtime.py  test_schema.py  test_workflow_map.py
tests/fixtures/context/: exception_agent_context.md  exception_trace.json  exception_workflow_map.json  expectation_failure_agent_context.md  expectation_failure_trace.json  expectation_failure_workflow_map.json  no_failure_agent_context.md  no_failure_trace.json  no_failure_workflow_map.json
