[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowguard"
version = "0.2.0"
description = "Workflow context bridge for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Charlottezeng" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
flowguard = "flowguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flowguard"]
